feat companyback.html外加company_info.html兩份html還有style.scss的import另外還有c_back_info一點點東西

--- a/src/companyback.html
+++ b/src/companyback.html
@@ -29,7 +29,7 @@
   </header>
   <!-- content，各自頁面的html寫在這邊以下都是範例 -->
   <main>
-    <section class="wrapper">
+    <section class=" wrapper company_wrapper">
       <div class="company_title"><a class="title_skill">直播申請區</a></div>
       <!-- 第一層 -->
 
@@ -56,15 +56,14 @@
       <div class="company_title chatboard"><a class="title_skill">廠商留言板</a></div>
       <!-- 第二層聊天室 -->
       <section>
-        <ul>
+
+        <ul class="companyback_main_chatbox">
           <li>
             <div class="companyback_search">
               <!-- icon -->
-              <input class="companyback_searchinput mt-38" type="search" name="search" placeholder="Search"
+              <input class="companyback_searchinput mt-44" type="search" name="search" placeholder="Search"
                 autocomplete="">
             </div>
-          </li>
-          <li>
             <section class="companyback_chat1 mt-43">
               <h3>廠商</h3>
               <ol class="chat1_company pt-12">
@@ -106,76 +105,107 @@
                 </li>
               </ol>
             </section>
+            <section class="companyback_chat1 sechtion_chat2 mt-43">
+              <h3>來賓</h3>
+              <ol class="chat1_company pt-12">
+                <li class="variouscompany">
+                  <div>
+                    <i class="fa-solid fa-id-card-clip "></i>
+                    <span>
+                      <h3>來賓</h3>
+                      <h5>Hi</h5>
+                    </span>
+                    <span class="variouscompany_span">
+                      <i class="fa-solid fa-check -main_color"></i>
+                      <p>Today, 5:25pm</p>
+                    </span>
+                  </div>
+
+                </li>
+                <li class="variouscompany">
+                  <div>
+                    <i class="fa-solid fa-id-card-clip"></i>
+                    <span>
+                      <h3>來賓</h3>
+                      <h5>Hi</h5>
+                    </span>
+                    <span class="variouscompany_span">
+                      <i class="fa-solid fa-check-double"></i>
+                      <p>Today, 5:25pm</p>
+                    </span>
+                  </div>
+
+                </li>
+                <li class="variouscompany">
+                  <div>
+                    <i class="fa-solid fa-id-card-clip"></i>
+                    <span>
+                      <h3>來賓</h3>
+                      <h5>Hi</h5>
+                    </span>
+                    <span class="variouscompany_span">
+                      <i class="fa-solid fa-check  -main_color"></i>
+                      <p>Today, 5:25pm</p>
+                    </span>
+                  </div>
+
+                </li>
+                <li class="variouscompany" style="border: none;">
+                  <div>
+                    <i class="fa-solid fa-id-card-clip"></i>
+                    <span>
+                      <h3>來賓</h3>
+                      <h5>Hi</h5>
+                    </span>
+                    <span class="variouscompany_span">
+                      <i class="fa-solid fa-check-double"></i>
+                      <p>Today, 5:25pm</p>
+                    </span>
+                  </div>
+
+                </li>
+              </ol>
+            </section>
+          </li>
+
+
+          <li>
+            <article class="companyback_back_chatbox  mt-43">
+              <div class="chat_title ">
+                <i class="fa-solid fa-address-card main-color"></i>
+                <span class="pl-27">
+                  <h3>廠商名稱</h3>
+                  <h5>Online</h5>
+                </span>
+
+
+              </div>
+              <div class="companyback_chated mt-41">
+                <p class="chat_content chat_content_you  mt-43 ml-30">你今天過得好嗎?<span>Today, 2:01pm</span>
+                </p>
+                <p class="chat_content chat_content_you  mt-43 ml-30">我過得很好喔 <span>Today,
+                    2:01pm</span></p>
+                <p class="chat_content chat_content_me  mt-43 mr-30">對啊團專<span>Today, 2:01pm</span>
+                </p>
+                <p class="chat_content chat_content_me  mt-43 ">哭啊大家的動作也太快了吧<span>Today,
+                    2:01pm</span>
+                </p>
+                <p class="chat_content chat_content_you  mt-43 ml-30">所以你要振作一點阿<span>Today, 2:01pm</span>
+                </p>
+                <p class="chat_content chat_content_me  mt-43 mr-30">哭啊大家的動作也太快了吧<span>Today,
+                    2:01pm</span>
+                </p>
+              </div>
+              <div class="chat_input mt-35">
+                <input type="text" placeholder="請輸入訊息內容..." class="">
+                <button class="chat_input_button"><i class="fa-solid fa-paper-plane"></i></button>
+              </div>
+            </article>
           </li>
         </ul>
 
 
 
-
-
-
-
-        <section class="companyback_chat1 sechtion_chat2 mt-43">
-          <h3>來賓</h3>
-          <ol class="chat1_company pt-12">
-            <li class="variouscompany">
-              <div>
-                <i class="fa-solid fa-id-card-clip "></i>
-                <span>
-                  <h3>來賓</h3>
-                  <h5>Hi</h5>
-                </span>
-                <span class="variouscompany_span">
-                  <i class="fa-solid fa-check -main_color"></i>
-                  <p>Today, 5:25pm</p>
-                </span>
-              </div>
-
-            </li>
-            <li class="variouscompany">
-              <div>
-                <i class="fa-solid fa-id-card-clip"></i>
-                <span>
-                  <h3>來賓</h3>
-                  <h5>Hi</h5>
-                </span>
-                <span class="variouscompany_span">
-                  <i class="fa-solid fa-check-double"></i>
-                  <p>Today, 5:25pm</p>
-                </span>
-              </div>
-
-            </li>
-            <li class="variouscompany">
-              <div>
-                <i class="fa-solid fa-id-card-clip"></i>
-                <span>
-                  <h3>來賓</h3>
-                  <h5>Hi</h5>
-                </span>
-                <span class="variouscompany_span">
-                  <i class="fa-solid fa-check  -main_color"></i>
-                  <p>Today, 5:25pm</p>
-                </span>
-              </div>
-
-            </li>
-            <li class="variouscompany" style="border: none;">
-              <div>
-                <i class="fa-solid fa-id-card-clip"></i>
-                <span>
-                  <h3>來賓</h3>
-                  <h5>Hi</h5>
-                </span>
-                <span class="variouscompany_span">
-                  <i class="fa-solid fa-check-double"></i>
-                  <p>Today, 5:25pm</p>
-                </span>
-              </div>
-
-            </li>
-          </ol>
-        </section>
 
 
 
@@ -250,7 +280,7 @@
 
 
     .flatpickr-day {
-      color: #7A7585;
+      color: #57FFF5;
     }
 
 
