--- a/src/companyback_info.html
+++ b/src/companyback_info.html
@@ -29,8 +29,23 @@
     <section class="wrapper">
       <section class="wrapper company_wrapper">
         <div class="company_title">
-          <a class="title_skill">技術展示區</a>
+          <a class="title_skill">廠商資料設定區</a>
         </div>
+        <form action="" class="companyback_info_form">
+          <ul>
+            <li>
+              <div class="field">
+                <h2>策展名稱:</h2>
+                <input type="text" id="email" required autocomplete="off" class="" />
+                <label for="email" title="Display name" data-title="策展名稱"></label>
+              </div>
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </form>
+
       </section>
       <section>
 
