feat:調整media:1400-1600px

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     <!-- content，各自頁面的html寫在這邊以下都是範例 -->
     <main>
         <div class="index_block">
-            <img src="./img/index/01.jpg">
+            <img src="./img/index/01.jpg" class="-margin0auto">
             <div class="index_title">
                 <h1 class="index_title_h1  main-color" 
                 data-spotlight="Tián lám 2022 智慧全球科技聚策展！">
@@ -46,7 +46,7 @@
             <!-- 下方輪播 -->
             <div class="index_swiper_wrapper">
                 <div class="swiper mySwiper index_swiper_container">
-                    <div class="swiper-wrapper index_wrapper">
+                    <div class="swiper-wrapper">
                         <div class="swiper-slide index_slide">
                             <a href="./live.html">
                                 <img src="./img/index/02.svg" />
