feat 更改將講師介紹hover效果改為js click翻面

--- a/src/about.html
+++ b/src/about.html
@@ -98,7 +98,7 @@
             <h3 class="mt-18">郭水義</h3>
             <h4 class="mt-8">中華電信總經理</h4>
           </div>
-          <div class="about_hoverText ">
+          <div class="about_hoverText -hide">
             <h4>郭水義<br>經歷
               <ul>
                 <li>-中華電信執行副總經理暨財務長</li>
@@ -116,7 +116,7 @@
           <h3 class="mt-18">張忠謀</h3>
           <h4 class="mt-8">台積電創辦人</h4>
           </div>
-          <div class="about_hoverText">
+          <div class="about_hoverText -hide">
             <h4>張忠謀<br>經歷
               <ul>
                 <li>-應邀至擔任工業技術研究院院長</li>
@@ -133,7 +133,7 @@
           <h3 class="mt-18">唐鳳</h3>
           <h4 class="mt-8">現職:行政院政務委員</h4>
           </div>
-          <div class="about_hoverText">
+          <div class="about_hoverText -hide">
             <h4>唐鳳<br>經歷
               <ul>
                 <li>-行政院虛擬世界法規調適計劃顧問</li>
