--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <div class="index_block">
             <img src="./img/index/01.jpg" class="-margin0auto">
             <div class="index_title">
-                <h1 class="index_title_h1  main-color" 
+                <h1 class="main-color" 
                 data-spotlight="Tián lám 2022 智慧全球科技聚策展！">
                     Tián lám 2022 智慧全球科技聚策展
                 </h1>
