feat:修改廠商介面的按鈕，將所有companyback的html檔新增jquery

--- a/src/companyback.html
+++ b/src/companyback.html
@@ -198,7 +198,7 @@
               </div>
               <div class="chat_input mt-35">
                 <input type="text" placeholder="請輸入訊息內容..." class="">
-                <button class="chat_input_button"><i class="fa-solid fa-paper-plane"></i></button>
+                <button class="btn-short ml-5" ><i class="fa-solid fa-paper-plane"></i></button>
               </div>
             </article>
           </li>
@@ -217,6 +217,8 @@
     @@include('layout/footer.html')
   </footer>
 
+  <!-- jQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <!-- 先連結main再連結各自設的js -->
   <script src="js/main.min.js"></script>
   <script src="js/login.min.js"></script>
