feat:修正background留言板對話框樣式

--- a/src/companyback.html
+++ b/src/companyback.html
@@ -181,18 +181,18 @@
 
               </div>
               <div class="companyback_chated mt-41">
-                <p class="chat_content chat_content_you  mt-43 ml-30">你今天過得好嗎?<span>Today, 2:01pm</span>
+                <p class="chat_content chat_content_you  mt-43 mr-30">你今天過得好嗎?<span>Today, 2:01pm</span>
                 </p>
-                <p class="chat_content chat_content_you  mt-43 ml-30">我過得很好喔 <span>Today,
+                <p class="chat_content chat_content_you  mt-43 mr-30">我過得很好喔 <span>Today,
                     2:01pm</span></p>
-                <p class="chat_content chat_content_me  mt-43 mr-30">對啊團專<span>Today, 2:01pm</span>
+                <p class="chat_content chat_content_me  mt-43 ml-30">對啊團專<span>Today, 2:01pm</span>
                 </p>
-                <p class="chat_content chat_content_me  mt-43 ">哭啊大家的動作也太快了吧<span>Today,
+                <p class="chat_content chat_content_me  mt-43 ml-30">哭啊大家的動作也太快了吧<span>Today,
                     2:01pm</span>
                 </p>
-                <p class="chat_content chat_content_you  mt-43 ml-30">所以你要振作一點阿<span>Today, 2:01pm</span>
+                <p class="chat_content chat_content_you  mt-43 mr-30">所以你要振作一點阿<span>Today, 2:01pm</span>
                 </p>
-                <p class="chat_content chat_content_me  mt-43 mr-30">哭啊大家的動作也太快了吧<span>Today,
+                <p class="chat_content chat_content_me  mt-43 ml-30">哭啊大家的動作也太快了吧<span>Today,
                     2:01pm</span>
                 </p>
               </div>
