--- a/src/index.html
+++ b/src/index.html
@@ -49,28 +49,28 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide index_slide">
                             <a href="./live.html">
-                                <img src="./img/index/02.svg" />
+                                <img src="./img/index/02.svg" class="-margin0auto">
                                 <div>
-                                    <h2>現正直播</h2>
-                                    <h3>Live</h3>
+                                    <h2 class="text_center">現正直播</h2>
+                                    <h3 class="text_center">Live</h3>
                                 </div>
                             </a>
                         </div>
                         <div class="swiper-slide index_slide">
                             <a href="./extend.html">
-                                <img src="./img/index/02.svg" />
+                                <img src="./img/index/02.svg" class="-margin0auto">
                                 <div>
-                                    <h2>虛擬商展</h2>
-                                    <h3>Exhibition</h3>
+                                    <h2 class="text_center">虛擬商展</h2>
+                                    <h3 class="text_center">Exhibition</h3>
                                 </div>
                             </a>
                         </div>
                         <div class="swiper-slide index_slide">
                             <a href="./about.html">
-                                <img src="./img/index/02.svg" />
+                                <img src="./img/index/02.svg" class="-margin0auto">
                                 <div>
-                                    <h2>展會介紹</h2>
-                                    <h3>About</h3>
+                                    <h2 class="text_center">展會介紹</h2>
+                                    <h3 class="text_center">About</h3>
                                 </div>
                             </a>
                         </div>
