fix: 現正直播頁面修改會出現下面的卷軸問題

--- a/src/live.html
+++ b/src/live.html
@@ -88,7 +88,7 @@
       </div>
     </section>
     <!-- 下方廠商介紹區 -->
-    <section>
+    <div>
       <div class="live-company">
         <ul class="live-company-text">
           <li>
@@ -108,7 +108,7 @@
         </ul>
         <img src="img/live/live_circle.svg" alt="圓形圖案" class="img-circle">
       </div>
-    </section>
+    </div>
   </main>
   <!-- footer -->
   <footer>@@include('layout/footer.html')</footer>
