--- a/src/backstage/backstage_index.html
+++ b/src/backstage/backstage_index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <!-- datatable -->
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-1.11.5/datatables.min.css"/>
+  <!-- boostrap form switch按鈕 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <!-- css -->
   <link rel="stylesheet" href="./css/style.min.css" />
   <!-- font awesome -->
@@ -82,73 +84,73 @@
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>
           <tr>
-            <td>2</td>
+            <td>3</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>4</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>5</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>6</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>7</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>8</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>9</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>10</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>11</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>12</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>13</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
             <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-5">刪除</button></td>
           </tr>          <tr>
-            <td>2</td>
+            <td>14</td>
             <td>Tián lám 2022智慧全球科技聚策展</td>
             <td>2022/03/22</td>
             <td>進行中</td>
@@ -160,7 +162,7 @@
 
       </div>
     </article> -->
-    <article class="-margin0auto mt-10 table_outer">
+    <!-- <article class="-margin0auto mt-10 table_outer">
       <button class="backstage_btn backstage_btn_add mb-15">新增</button>
       <h3 class="bg-color pall-15">展覽場次</h3>
       <table id="backstage_info_1" class="table">
@@ -187,7 +189,58 @@
       <div class="lookmorebox">
 
       </div>
-    </article>
+    </article> -->
+     <!-- <article class="-margin0auto mt-10 table_outer">
+      <button class="backstage_btn backstage_btn_add mb-15">新增</button>
+      <h3 class="bg-color pall-15">直播審核表</h3>
+      <table id="backstage_info_1" class="table">
+        <thead>
+          <tr>
+            <th>直播ID</th>
+            <th>廠商名稱</th>
+            <th>開始時間</th>
+            <th>申請時間</th>
+            <th>狀態</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>台積電股份有限公司</td>
+            <td>2022/03/17 13:00</td>
+            <td>2022/03/17 13:00</td>
+            <td class="backstage_btn_td">
+              <div class="custom-control custom-switch switch_flex">不通過
+                <div class="custom-control custom-switch">   
+                  <input type="checkbox" class="custom-control-input" id="customSwitch1">
+                  <label class="custom-control-label" for="customSwitch1"></label>
+                </div>
+              通過</div> 
+            </td>
+            <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-4">刪除</button></td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>台積電股份有限公司</td>
+            <td>2022/03/17 13:00</td>
+            <td>2022/03/17 13:00</td>
+            <td class="backstage_btn_td">
+              <div class="custom-control custom-switch switch_flex">不通過
+                <div class="custom-control custom-switch">   
+                  <input type="checkbox" class="custom-control-input" id="customSwitch2">
+                  <label class="custom-control-label" for="customSwitch2"></label>
+                </div>
+              通過</div> 
+            </td>
+            <td class="backstage_btn_td"><button class="backstage_btn backstage_btn_short">修改</button><button class="backstage_btn backstage_btn_bad ml-4">刪除</button></td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="lookmorebox">
+
+      </div>
+    </article> -->
   </main>
 
   <!-- jQuery -->
