feat: index.html新增emailjs的cdn

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,13 @@
     <!-- Swiper css/js -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
+    <!-- EmailJS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("VmKwawpbImHtur7aa");
+        })();
+    </script>
     <title>聚策展</title>
 </head>
 
@@ -38,8 +44,7 @@
             <img src="./img/index/01.jpg" class="-margin0auto index_bcg_desktop">
             <img src="./img/index/03.jpg" class="=margin0auto index_bcg_mobile">
             <div class="index_title">
-                <h1 class="main-color"
-                data-spotlight="Tián lám 2022 智慧全球科技聚策展！">
+                <h1 class="main-color" data-spotlight="Tián lám 2022 智慧全球科技聚策展！">
                     Tián lám 2022 智慧全球科技聚策展
                 </h1>
             </div>
