--- a/src/backstage/backstage_info1.html
+++ b/src/backstage/backstage_info1.html
@@ -22,46 +22,73 @@
 </head>
 
 <body class="backstage_body">
-  <nav class="nav backstage_nav">
-    <a href="./index.html" class="logo"><img src="img/tianlam-logo-backstage.svg" alt="logo" class="img"></img></a>
-    <h3 class="ml-45">Tián lám➪後台中心</h3>
-    <ul class="flex-box-end">
-      <li><a href="index.html" class="backstage_logout"><h4>帳號登出</h4><img src="img/backstage_logout.svg" alt="logout" class="ml-6"></a></li>
-    </ul>
-  </nav>
-  <main id="page">
-    <ul class="backstage_menu pall-5"  :class="{'-backstage_aside_on': aside_btn === true}">
-        <div class="mt-20 mb-10 -margin0auto "><a class="backstage_menu_btn"><h4>資訊管理</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
-        <div class="backstage_menu_inner mb-10">
-          <a href="backstage_info1.html"><h4>展覽場次</h4></a>
-          <a href="backstage_info2.html"><h4>大會議程</h4></a>
-          <a href="backstage_info3.html"><h4>講師介紹</h4></a>
-          <a href="backstage_info4.html"><h4>新聞資訊</h4></a>
-          <a href="backstage_info5.html"><h4>聯絡我們</h4></a>
-        </div>
-        <div class="-margin0auto pb-10"><a class="backstage_menu_btn"><h4>會員管理</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
-        <div class="backstage_menu_inner mb-10">
-          <a href="backstage_member1.html"><h4>來賓管理</h4></a>
-          <a href="backstage_member2.html"><h4>廠商管理</h4></a>
-        </div>
-        <div class="-margin0auto pb-10"><a class="backstage_menu_btn"><h4>活動管理</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
-        <div class="backstage_menu_inner">
-          <a href="backstage_expo1.html"><h4>廠商資料</h4><a>
-          <a href="backstage_expo2.html"><h4>直播時段</h4></a>
-          <a href="backstage_expo3.html"><h4>直播審核表</h4></a>
-          <a href="backstage_expo4.html"><h4>直播留言板</h4></a>
-        </div>
-        <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()" class="backstage_aside_btn"/>
-    </ul>
-    <section class="backstage_main">
-        <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()" class="backstage_aside_btn pt-10 pl-10"/>
+    <nav class="nav backstage_nav">
+        <a href="./index.html" class="logo"><img src="img/tianlam-logo-backstage.svg" alt="logo" class="img"></img></a>
+        <h3 class="ml-45">Tián lám➪後台中心</h3>
+        <ul class="flex-box-end">
+            <li><a href="index.html" class="backstage_logout"><h4>帳號登出</h4><img src="img/backstage_logout.svg" alt="logout" class="ml-6"></a></li>
+        </ul>
+    </nav>
+    <main id="page">
+        <ul class="backstage_menu pall-5"  :class="{'-backstage_aside_on': aside_btn === true}">
+            <div class="mt-20 mb-10 -margin0auto "><a class="backstage_menu_btn"><h4>資訊管理</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
+            <div class="backstage_menu_inner mb-10">
+                <a href="backstage_info1.html"><h4>展覽場次</h4></a>
+                <a href="backstage_info2.html"><h4>大會議程</h4></a>
+                <a href="backstage_info3.html"><h4>講師介紹</h4></a>
+                <a href="backstage_info4.html"><h4>新聞資訊</h4></a>
+                <a href="backstage_info5.html"><h4>聯絡我們</h4></a>
+            </div>
+            <div class="-margin0auto pb-10"><a class="backstage_menu_btn"><h4>會員管理</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
+            <div class="backstage_menu_inner mb-10">
+                <a href="backstage_member1.html"><h4>來賓管理</h4></a>
+                <a href="backstage_member2.html"><h4>廠商管理</h4></a>
+            </div>
+            <div class="-margin0auto pb-10"><a class="backstage_menu_btn"><h4>活動管理</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
+            <div class="backstage_menu_inner">
+                <a href="backstage_expo1.html"><h4>廠商資料</h4><a>
+                <a href="backstage_expo2.html"><h4>直播時段</h4></a>
+                <a href="backstage_expo3.html"><h4>直播審核表</h4></a>
+                <a href="backstage_expo4.html"><h4>直播留言板</h4></a>
+            </div>
+            <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()" class="backstage_aside_btn"/>
+        </ul>
+        <section class="backstage_main">
+            <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()" class="backstage_aside_btn pt-10 pl-10"/>
             <datatable></datatable>
-        <!-- 彈窗 -->
-        <div class="backstage_add_box">
-            
-        </div>
-    </section>
-  </main>
+            <!-- 彈窗 -->
+            <!-- <article class="backstage_box backstage_info1_add">
+                <h2>新增</h2>
+                <div class="backstage_box-content pt-30">
+                    <ul>
+                        <li class="mb-16 input-short"><label for="name">策展ID</label>
+                            <input type="text" name="name" id="name">
+                        </li>
+                        <li class="mb-16 input-short"><label for="introduce">展會名稱</label>
+                            <input type="text" name="introduce" id="introduce">
+                        </li>
+                        <li class="mb-16 input-long"><label for="time">會議簡介</label>
+                            <textarea name="time" id="time" cols="30" rows="10"></textarea>
+                        <li class="mb-16 input-short"><label for="startdate">活動開始</label>
+                            <input type="date" name="date" id="startdate">
+                        </li>
+                        <li class="mb-16 input-short"><label for="enddate">活動結束</label>
+                            <input type="date" name="date" id="enddate">
+                        </li>
+                        <div class="mb-16 input-short"><label>進行狀態</label><br>
+                            <label for="notwork"><input type="radio" name="date" id="notwork">尚未開始</label>
+                            <label for="working"><input type="radio" name="date" id="working">進行中</label>
+                            <label for="worked"><input type="radio" name="date" id="worked">已結束</label>
+                        </div>
+                    </ul>                   
+                    <div class="back-insert-btn">
+                        <button class="back-insert_save" @click="f_save">儲存</button>
+                        <button class="back-insert_close" @click="f_close">關閉</button>
+                    </div>
+                </div>
+            </article> -->
+        </section>
+    </main>
 
   <!-- jQuery for datatable-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
