feat 增加about頁面 banner上slogan div及修改rwd 避免字語banner大圖重疊

--- a/src/about.html
+++ b/src/about.html
@@ -35,10 +35,19 @@
     <section class="about_banner">
       <img src="img/about/about_banner.png">
       <div class="about_slogan pd-10">
-        <h2 class="about_subtitle">--------- 2022 最新科技展 ---------</h2>
-        <div class="about_rwd_title">2022 最新科技展</div>
-        <h1>新智慧、新科技、新創意</h1>
-        <h2>2022.04.01 - 2022.06.30</h2>
+        <div class="about_sloganFirst">
+          <h2 class="about_subtitle">---------- 2022 最新科技展 ----------</h2>
+          <div class="about_new">
+            <h1>新智慧、新科技、新創意</h1>
+            <h2>04.01 - 06.30</h2>
+          </div>
+        </div>
+        <div class="about_rwd_title">
+          2022 最新科技展
+          <h2 class="about_date">04.01 - 06.30</h2>
+        </div>
+
+        <!-- <h2 class="about_date">04.01 - 06.30</h2> -->
       </div>
     </section>
     <section class="wrapper about_brief wrapper_about">
@@ -112,9 +121,9 @@
         </div>
         <div class="about_speaker mt-20">
           <div class="about_speaker_intro">
-          <img class="mt-35" src="img/about/speaker2.png">
-          <h3 class="mt-18">張忠謀</h3>
-          <h4 class="mt-8">台積電創辦人</h4>
+            <img class="mt-35" src="img/about/speaker2.png">
+            <h3 class="mt-18">張忠謀</h3>
+            <h4 class="mt-8">台積電創辦人</h4>
           </div>
           <div class="about_hoverText -hide">
             <h4>張忠謀<br>經歷
@@ -129,9 +138,9 @@
         </div>
         <div class="about_speaker mt-20">
           <div class="about_speaker_intro">
-          <img class="mt-35" src="img/about/speaker3.png">
-          <h3 class="mt-18">唐鳳</h3>
-          <h4 class="mt-8">現職:行政院政務委員</h4>
+            <img class="mt-35" src="img/about/speaker3.png">
+            <h3 class="mt-18">唐鳳</h3>
+            <h4 class="mt-8">現職:行政院政務委員</h4>
           </div>
           <div class="about_hoverText -hide">
             <h4>唐鳳<br>經歷
