feat:刪除部分素材

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                 <div class="index_right_side">
                     <img src="./img/index/321.png" class="index_bar_img6">
                 </div>
-
+                <!-- mobile背景 -->
                 <img src="./img/index/031.jpg" class="=margin0auto index_bcg_mobile">
             <!-- </div> -->
             <!-- <div data-depth="0.6">
