--- a/src/contect.html
+++ b/src/contect.html
@@ -18,6 +18,8 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- is.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">   
     <title>Contect</title>
 </head>
 
@@ -31,14 +33,14 @@
         @@include('layout/login.html')
     </header>
     <!-- content，各自頁面的html寫在這邊以下都是範例 -->
-    <main>
+    <main class="contect_main">
         <section class="wrapper contect_wrapper">
             <div class="contect_slogan">
                 <h2>Attend Exhibition</h2>
                 <h2>策展這件事，就是聚策展的事</h2>
             </div>
         </section>
-        <section class="wrapper contect_wrapper ">
+        <section class="wrapper contect_wrapper " data-aos="fade-up" data-aos-duration="2000">
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <div class="contect_introduction">
@@ -138,7 +140,8 @@
     <footer>
         @@include('layout/footer.html')
     </footer>
-
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- 先連結main再連結各自設的js -->
     <script src="js/main.min.js"></script>
     <script src="js/login.min.js"></script>
