--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
             emailjs.init("VmKwawpbImHtur7aa");
         })();
     </script>
+    <!-- is.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
     <title>聚策展</title>
 </head>
 
