--- a/src/about.html
+++ b/src/about.html
@@ -16,7 +16,15 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+  <!-- EmailJS -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+  <script type="text/javascript">
+      (function () {
+          emailjs.init("VmKwawpbImHtur7aa");
+      })();
+  </script>
+  <!-- is.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
 
   <title>About</title>
 </head>
