--- a/src/contect.html
+++ b/src/contect.html
@@ -18,6 +18,13 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- is.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
+    <!-- EmailJS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("VmKwawpbImHtur7aa");
+        })();
+    </script>
     <title>Contect</title>
 </head>
 
