--- a/src/extend.html
+++ b/src/extend.html
@@ -14,7 +14,15 @@
     integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
   <!-- title icon -->
   <link rel="icon" href="img/tianlam-logo-mainblack.svg">
-
+  <!-- EmailJS -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+  <script type="text/javascript">
+      (function () {
+          emailjs.init("VmKwawpbImHtur7aa");
+      })();
+  </script>
+  <!-- is.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
   <title>聚策展-虛擬商展</title>
 </head>
 
