--- a/src/live.html
+++ b/src/live.html
@@ -18,13 +18,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <!-- VUE -->
   <script src="js/vue.min.js"></script>
-  <!-- 發信emailJS -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <!-- EmailJS -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
   <script type="text/javascript">
-  (function() {
-  emailjs.init("HRi5tweGhe3y1JwPZ");
-  })();
+      (function () {
+          emailjs.init("VmKwawpbImHtur7aa");
+      })();
   </script>
+  <!-- is.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
   <title>聚策展-現正直播</title>
 </head>
 
